Minor name changes. Added a basic audio service example for the EMAudioPlayer and EMNotification.

--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ExoMedia Demo</string>
     <string name="title_activity_video_player">ExoMedia Video Player</string>
+    <string name="title_activity_audio_player">ExoMedia Audio Player</string>
 </resources>
