Minor updates to the Playlist manager and service. Updated the demo app to use the new playlist service and manager.

--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">ExoMedia Demo</string>
     <string name="title_activity_video_player">ExoMedia Video Player</string>
     <string name="title_activity_audio_player">ExoMedia Audio Player</string>
+
+    <string name="title_audio_selection_activity">The Count of Monte Cristo</string>
 </resources>
